# u2net-basnet-script

./: CMakeLists.txt  Configs.h  TorchScript.cpp  TorchScript.h  basnet_script.py  main.cpp  u2net_torchscript.py
